# bme68x_iaq_driver

./: CMakeLists.txt  Kconfig  README.md  prj.conf
boards/arm/hhs_nrf52832/: Kconfig  Kconfig.board  Kconfig.defconfig  README.md  hhs_nrf52832-pinctrl.dtsi  hhs_nrf52832.dts  hhs_nrf52832.yaml  hhs_nrf52832_defconfig
drivers/: CMakeLists.txt  Kconfig
drivers/bme68x_iaq/: CMakeLists.txt  Kconfig  bme68x_iaq.c  bme68x_iaq.h
dts/bindings/: bosch,bme68x-i2c.yaml
include/drivers/: bme68x_iaq.h
lib/bsec/examples/bme68x_demo_sample/: ble_controller.cpp  ble_controller.h  bme68x_datalogger.cpp  bme68x_datalogger.h  bme68x_demo_sample.ino  bsec_datalogger.cpp  bsec_datalogger.h  commMux.h  demo_app.h  label_provider.cpp  label_provider.h  led_controller.cpp  led_controller.h  sensor_manager.cpp  sensor_manager.h  utils.cpp  utils.h
lib/bsec/examples/generic_examples/basic/: basic.ino
lib/bsec/examples/generic_examples/basic_config_state/: basic_config_state.ino
lib/bsec/examples/x8_board_examples/basic/: basic.ino
lib/bsec/examples/x8_board_examples/basic_config_state/: basic_config_state.ino  commMux.cpp
lib/bsec/src/: bsec2.cpp  bsec2.h
lib/bsec/src/config/Default_H2S_NonH2S/: Default_H2S_NonH2S.c  Default_H2S_NonH2S.h
lib/bsec/src/config/FieldAir_HandSanitizer/: FieldAir_HandSanitizer.c
lib/bsec/src/inc/: bsec_datatypes.h  bsec_interface.h  bsec_interface_multi.h
src/: bme680_app.h  main.c
